refactor: use ristretto_classfile=0.16.0 MaxLocals and MaxStack traits to calculate values

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "rustc_codegen_jvm"
 version = "0.1.0"
 edition = "2024"
+license = "Apache-2.0 OR MIT"
 
 [dependencies]
-ristretto_classfile = { version = "0.14.0" }
+ristretto_classfile = { version = "0.16.0" }
 
 [lib]
 crate-type = ["dylib"]
